[gd_scene load_steps=2 format=3 uid="uid://hud123456789"]

[ext_resource type="Script" path="res://src/ui/hud.gd" id="1_hud01"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud01")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "SCORE: 000000"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LivesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/LivesContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "LIVES: 3"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemiesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2

[node name="EnemiesLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/EnemiesContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "ENEMIES: 20"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="VictoryPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VictoryLabel" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "VICTORY!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="GameOverPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VictoryPanel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VictoryPanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
